Fix salt figure overflow display issue

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -654,6 +654,7 @@ body .slick-dots li button {
   border: 1px solid gray;
   border-top-left-radius: 16px; 
   border-bottom-right-radius: 16px; 
+  word-break: break-all;
 }
 
 .one-way-dataflow-box p { 
